--- a/main.css
+++ b/main.css
@@ -11,8 +11,8 @@
 
  }
 
-  /* MENU */
 
+  /* MENU */
  .menu{
     width: 100%;
     height: 80px;
@@ -81,7 +81,13 @@ iframe{
  a:link{
      text-decoration: none;
  }
- /* LOGIN */
+
+
+
+ /* LOGIN */ 
+ .login_cadastro{
+     display: none;
+ }
  .login{
      width: 100%;
      margin-top: 30px;
@@ -166,6 +172,7 @@ iframe{
 
   /* HOME */
  .Home{
+    display: inline;
      width: 100%;
  }
 .Home h2{
@@ -181,8 +188,11 @@ p{
     font-family: 'Arial';
     font-size: 1.2rem;
 }
+
+
 /* EMPRESAS */
 .empresas{
+    display: none;
     width: 100%;
 }
 .empresas h2{
@@ -198,6 +208,18 @@ p{
     font-size: 1.1;
     padding-left: 10px;
     margin-top: 30px;
+}
+
+
+/* MAPA */
+.mapa{
+    display: none;
+}
+
+
+/* PONTOS DE COLETA*/
+.pontos_de_coleta{
+    display: none;
 }
 
 
